--- a/React-crash-course/src/App.css
+++ b/React-crash-course/src/App.css
@@ -17,6 +17,9 @@
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
+.h1{
+  background-color: black;
+}
 
 @keyframes logo-spin {
   from {
