--- a/React-crash-course/src/components/postList.module.css
+++ b/React-crash-course/src/components/postList.module.css
@@ -5,6 +5,7 @@
     padding: 1rem 0;
     display: grid;
     gap: 1rem;
+    background-color: aliceblue;
     grid-template-columns: repeat(3, 30%);
     justify-content: center;
   }
